tests/NormalTests/paczka1/small_fuzzy/74617801.err
Error in line 2: A758 A882 73,9
Error in line 8: cnAiV A882 32,0
Error in line 12: A758 A970 42,2
